# QBip39

./: CMakeLists.txt  Config.cmake.in  README.md  qbip39.cpp
.github/workflows/: build-test-install.yml
include/crypto/: dictionaries.hpp  qbip39.hpp
src/: dictionaries.cpp
tests/: CMakeLists.txt  test1.cpp
